--- a/src/client/components/Artists/Artists.scss
+++ b/src/client/components/Artists/Artists.scss
@@ -14,5 +14,4 @@
   @media (min-width: 1600px) {
     & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr; } }
   @media (min-width: 2000px) {
-    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; } }
-}
+    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; } } }
