--- a/src/client/components/DocLink/DocLink.scss
+++ b/src/client/components/DocLink/DocLink.scss
@@ -2,5 +2,4 @@
   text-decoration: none;
   &:hover {
     color: #1a73e8;
-    text-decoration: underline; }
-}
+    text-decoration: underline; } }
