--- a/src/client/components/Form/FormField/FormField.scss
+++ b/src/client/components/Form/FormField/FormField.scss
@@ -90,5 +90,4 @@
         &:hover {
           background-color: #e0e0e0; } } } }
   &__validators {
-    margin: 10px 0 0 13px; }
-}
+    margin: 10px 0 0 13px; } }
