--- a/src/client/components/Form/FormFieldDoc/FormFieldDoc.scss
+++ b/src/client/components/Form/FormFieldDoc/FormFieldDoc.scss
@@ -23,5 +23,4 @@
     transition: .2s all;
     border-radius: 100%;
     &:hover {
-      background-color: #BDBDBD; } }
-}
+      background-color: #BDBDBD; } } }
