--- a/src/client/components/Pages/Pages.scss
+++ b/src/client/components/Pages/Pages.scss
@@ -2,6 +2,5 @@
 
 .Pages {
   width: 100vw;
-  height: calc(100vh - #{$HEADER_HEIGHT});
   background-color: #FAFAFA;
-}
+  height: calc(100vh - #{$HEADER_HEIGHT}); }
