--- a/src/client/components/Catalog/Add/Add.scss
+++ b/src/client/components/Catalog/Add/Add.scss
@@ -4,5 +4,4 @@
   padding: 20px;
   display: flex;
   justify-content: center;
-  height: calc(100vh - #{$HEADER_HEIGHT});
-}
+  height: calc(100vh - #{$HEADER_HEIGHT}); }
