--- a/src/client/components/Form/Form.scss
+++ b/src/client/components/Form/Form.scss
@@ -3,5 +3,4 @@
   padding: 20px;
   border-radius: 4px;
   border: 1px solid #e0e0e0;
-  background-color: #ffffff;
-}
+  background-color: #ffffff; }
