--- a/src/client/components/Form/FormFields/FormFields.scss
+++ b/src/client/components/Form/FormFields/FormFields.scss
@@ -2,5 +2,4 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  justify-content: flex-start;
-}
+  justify-content: flex-start; }
