--- a/src/client/components/Form/FormTitle/FormTitle.scss
+++ b/src/client/components/Form/FormTitle/FormTitle.scss
@@ -1,17 +1,15 @@
 .FormTitle {
   font-size: 28px;
   position: relative;
-  display: inline-block;
-  padding-bottom: 10px;
   margin-bottom: 20px;
+  padding-bottom: 10px;
+  display: inline-block;
   &:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
     height: 2px;
-    background-color: #333333;
+    content: "";
+    position: absolute;
     transition: width .25s;
-  }
-}
+    background-color: #333333; } }
