--- a/src/client/components/Genre/Genre.scss
+++ b/src/client/components/Genre/Genre.scss
@@ -14,5 +14,4 @@
     border-left: 1px solid;
     border-right: 1px solid;
     border-bottom: 1px solid;
-    border-radius: 0 0 3px 3px; }
-}
+    border-radius: 0 0 3px 3px; } }
