--- a/src/client/components/Img/Img.scss
+++ b/src/client/components/Img/Img.scss
@@ -6,14 +6,13 @@
     display: block;
     padding-top: 100%; }
   &__img {
-    position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
     right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
+    position: absolute;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%; }
-}
+    background-position: 50% 50%; } }
