--- a/src/client/components/Songs/Songs.scss
+++ b/src/client/components/Songs/Songs.scss
@@ -1,10 +1,9 @@
 .Songs {
-  font-size: 16rem;
   &__table {
     width: 100%;
-    box-shadow: 0 1px 4px 0 rgba(#333333,.3);
+    border-collapse: collapse;
     background-color: #ffffff;
-    border-collapse: collapse; }
+    box-shadow: 0 1px 4px 0 rgba(#333333,.3); }
     &__tableHead {
       border-bottom: 1px solid #e0e0e0; }
       &__tableHeadRow {
@@ -12,11 +11,10 @@
         &__tableHeadCol {
           text-align: left;
           font-weight: 700;
-          text-transform: uppercase;
-          font-size: 15rem; }
+          font-size: 15rem;
+          text-transform: uppercase; }
         &__tableHeadCover {
           width: 50px;
           padding: 3px 0 0 12px; }
           &__tableHeadIcon {
-            font-size: 22rem; }
-}
+            font-size: 22rem; } }
