--- a/src/client/components/Form/FormFieldDoc/FormFieldDoc.scss
+++ b/src/client/components/Form/FormFieldDoc/FormFieldDoc.scss
@@ -1,25 +1,20 @@
 .FormFieldDoc {
   display: flex;
-  margin-right: 8px;
-  border-radius: 3px;
-  background-color: #EEEEEE;
-  border: 1px solid #BDBDBD;
-  &:last-child {
-    margin-right: 0; }
-  &__img {
-    width: 24px;
-    height: 24px;
-    border-radius: 3px 0 0 3px; }
+  align-items: center;
+  &__cover {
+    width: 26px;
+    height: 26px;
+    border-radius: 4px;
+    border: 1px solid #BDBDBD; }
   &__text {
+    margin-left: 8px;
     font-size: 18rem;
-    white-space: nowrap;
-    padding: 3px 3px 3px 6px; }
+    white-space: nowrap; }
   &__close {
-    margin: 2px;
     padding: 1px;
     outline: none;
-    margin-left: 0;
-    font-size: 18rem;
+    font-size: 22rem;
+    margin-left: 5px;
     transition: .2s all;
     border-radius: 100%;
     &:hover {
