--- a/src/client/components/Catalog/Add/Add.scss
+++ b/src/client/components/Catalog/Add/Add.scss
@@ -1,8 +1,5 @@
-@import "../../../globals/index.scss";
-
 .Add {
   padding: 20px;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
-  height: calc(100vh - #{$HEADER_HEIGHT}); }
+  justify-content: center; }
