--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -1,7 +1,9 @@
 @import "../../globals/index.scss";
 
 .Album {
-  margin-bottom: 10px;
+  margin-bottom: 0;
+  @media (min-width: 600px) {
+    & { margin-bottom: 10px; } }
   &__info {
     width: 100%;
     overflow: hidden;
@@ -14,9 +16,13 @@
       line-height: 1.1;
       text-overflow: ellipsis; }
     &__title {
-      font-size: 16rem;
+      font-size: 14rem;
       font-weight: 700;
-      margin-bottom: 3px; }
+      margin-bottom: 3px;
+      @media (min-width: 600px) {
+        & { font-size: 16rem; } } }
     &__artists {
-      font-size: 15rem;
-      font-weight: 400; } }
+      font-size: 14rem;
+      font-weight: 400;
+      @media (min-width: 600px) {
+        & { font-size: 15rem; } } } }
