--- a/src/client/components/Albums/Albums.scss
+++ b/src/client/components/Albums/Albums.scss
@@ -1,12 +1,14 @@
 .Albums {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 15px;
   font-size: 16rem;
   grid-template-columns: 1fr;
   @media (min-width: 350px) {
     & { grid-template-columns: 1fr 1fr; } }
   @media (min-width: 600px) {
-    & { grid-template-columns: 1fr 1fr 1fr; } }
+    & {
+      grid-gap: 20px;
+      grid-template-columns: 1fr 1fr 1fr; } }
   @media (min-width: 1100px) {
     & { grid-template-columns: 1fr 1fr 1fr 1fr; } }
   @media (min-width: 1400px) {
