--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -1,9 +1,6 @@
 @import "../../globals/index.scss";
 
 .Album {
-  margin-bottom: 0;
-  @media (min-width: 600px) {
-    & { margin-bottom: 10px; } }
   &__info {
     width: 100%;
     overflow: hidden;
@@ -14,7 +11,11 @@
       display: block;
       overflow: hidden;
       line-height: 1.1;
-      text-overflow: ellipsis; }
+      max-height: 14rem;
+      text-overflow: clip;
+      text-overflow: ellipsis;
+      @media (min-width: 600px) {
+        & { max-height: 16rem; } } }
     &__title {
       font-size: 14rem;
       font-weight: 700;
