--- a/src/client/components/Artists/Artists.scss
+++ b/src/client/components/Artists/Artists.scss
@@ -1,7 +1,9 @@
 .Artists {
+  padding: 20px;
   display: grid;
   grid-gap: 20px;
   font-size: 16rem;
+  padding-bottom: 10px;
   grid-template-columns: 1fr;
   @media (min-width: 350px) {
     & { grid-template-columns: 1fr; } }
