--- a/src/client/components/Player/Player.scss
+++ b/src/client/components/Player/Player.scss
@@ -7,6 +7,7 @@
   align-items: center;
   height: $PLAYER_HEIGHT;
   border-top: 1px solid #E0E0E0;
+  box-shadow: 0 1px 4px 0 rgba(51, 51, 51, 0.3);
   &__left,
   &__right {
     height: 100%;
