--- a/src/client/components/Header/Header.scss
+++ b/src/client/components/Header/Header.scss
@@ -7,7 +7,7 @@
   position: relative;
   height: $HEADER_HEIGHT;
   background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0,0,0, 0.1);
   &__hamburger {
     outline: none;
     font-size: 48rem;
