--- a/src/client/components/AlbumPage/AlbumPage.scss
+++ b/src/client/components/AlbumPage/AlbumPage.scss
@@ -1,4 +1,23 @@
+@import "../../globals/index.scss";
+
 .AlbumPage {
-  &__img {
+  padding: 20px;
+  overflow: auto;
+  height: calc(100vh - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT});
+  &__cover {
     width: 200px;
-    height: 200px; } }
+    height: 200px;
+    display: block;
+    margin-bottom: 20px;
+    box-shadow: 0 1px 4px 0 rgba(#333333, .3);
+    &__img {
+      width: 200px;
+      height: 200px; } }
+  &__main {
+    width: 100%; }
+    &__title {
+      font-size: 30rem;
+      margin-bottom: 10px; }
+    &__artists {
+      font-size: 17rem;
+      margin-bottom: 20px; } }
