--- a/src/client/components/Sidebar/Sidebar.scss
+++ b/src/client/components/Sidebar/Sidebar.scss
@@ -8,7 +8,8 @@
   font-size: 16rem;
   position: absolute;
   top: $HEADER_HEIGHT;
-  height: calc(100vh - #{$HEADER_HEIGHT});
+  background-color: rgba(#000000, .4);
+  height: calc(100vh - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT});
   &__nav {
     top: 0;
     left: 0;
@@ -18,7 +19,7 @@
     position: absolute;
     background-color: #ffffff;
     border-right: 1px solid #e0e0e0;
-    height: calc(100vh - #{$HEADER_HEIGHT}); }
+    height: calc(100vh - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT}); }
     &__routes {
       display: flex;
       flex-direction: column; }
