--- a/src/client/components/AlbumPage/AlbumPage.scss
+++ b/src/client/components/AlbumPage/AlbumPage.scss
@@ -1,9 +1,7 @@
-@import "../../globals/index.scss";
-
 .AlbumPage {
+  height: 100%;
   padding: 20px;
   overflow: auto;
-  height: calc(100vh - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT});
   &__cover {
     width: 200px;
     height: 200px;
