--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -9,27 +9,24 @@
 *:before {
   margin: 0;
   padding: 0;
+  color: inherit;
+  font-size: inherit;
   box-sizing: inherit;
   font-family: inherit;
-  line-height: inherit;
-  font-size: inherit;
-  color: inherit;
-}
+  line-height: inherit; }
 
 html {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, $FONT_FAMILY, sans-serif;
-  line-height: $LINE_HEIGHT;
-  font-size: $FONT_SIZE;
   color: $TEXT;
-  -webkit-font-smoothing: antialiased;
+  font-size: $FONT_SIZE;
+  box-sizing: border-box;
+  line-height: $LINE_HEIGHT;
   -moz-osx-font-smoothing: grayscale;
-}
+  -webkit-font-smoothing: antialiased;
+  font-family: -apple-system, BlinkMacSystemFont, $FONT_FAMILY, sans-serif; }
 
 #Index {
-  height: 100vh;
   width: 100vw;
-  overflow: hidden;
-  position: relative;
+  height: 100vh;
   font-size: 16rem;
-}
+  overflow: hidden;
+  position: relative; }
