--- a/src/client/components/ArtistPage/ArtistPage.scss
+++ b/src/client/components/ArtistPage/ArtistPage.scss
@@ -6,6 +6,7 @@
     width: 640px;
     height: 360px;
     display: block;
+    margin-bottom: 20px;
     box-shadow: 0 1px 4px 0 rgba(#333333, .3);
     &:before {
       padding-top: 56.25%; }
@@ -16,4 +17,8 @@
     width: 100%; }
     &__title {
       font-size: 30rem;
-      margin: 20px 0; } }
+      margin-bottom: 10px; }
+      &__length {
+        font-size: 17rem;
+        margin-bottom: 20px; } }
+  
