--- a/src/client/components/ArtistPage/ArtistPage.scss
+++ b/src/client/components/ArtistPage/ArtistPage.scss
@@ -18,7 +18,9 @@
     &__title {
       font-size: 30rem;
       margin-bottom: 10px; }
-      &__length {
-        font-size: 17rem;
-        margin-bottom: 20px; } }
+    &__length {
+      font-size: 17rem;
+      margin-bottom: 20px; }
+    &__songs {
+      margin-bottom: 20px; } }
   
