--- a/src/client/components/Song/Song.scss
+++ b/src/client/components/Song/Song.scss
@@ -6,7 +6,6 @@
   &__cover {
     width: 50px;
     height: 50px;
-    margin-right: 10px;
     border-radius: $BORDER_RADIUS;
     box-shadow:
       0 3px 6px rgba(#000000, .16),
@@ -20,6 +19,7 @@
   &__info {
     width: 100%;
     display: flex;
+    margin-left: 10px;
     flex-direction: column;
     justify-content: center;
     &-title {
