--- a/src/client/components/Artist/Artist.scss
+++ b/src/client/components/Artist/Artist.scss
@@ -6,5 +6,5 @@
   &__name {
     margin: 0;
     width: 100%;
-    padding: 10px 0;
-    font-size: 18rem; } }
+    font-size: 18rem;
+    padding-top: 10px; } }
