--- a/src/client/components/AlbumPage/AlbumPage.scss
+++ b/src/client/components/AlbumPage/AlbumPage.scss
@@ -14,10 +14,10 @@
   &__main {
     width: 100%; }
     &__title,
-    &__genres {
-      margin-bottom: 8px;
+    &__artists {
+      margin-bottom: 5px;
       @media (min-width: 700px) {
-        margin-bottom: 10px; } }
+        margin-bottom: 8px; } }
     &__title {
       display: flex;
       align-items: center;
@@ -33,10 +33,19 @@
         border-radius: 100%;
         &:hover {
           background-color: #e0e0e0; } } }
-    &__genres {
-      font-size: 17rem;
-      font-weight: 500; }
     &__artists {
       font-size: 17rem;
+      font-weight: 500; }
+    &__genres {
+      font-size: 17rem;
       font-weight: 400;
-      margin-bottom: 20px; } }
+      margin-bottom: 20px; }
+    &__disc {
+      margin-bottom: 15px;
+      &:last-child {
+        margin-bottom: 0; }
+      &-number {
+        font-size: 15rem;
+        font-weight: 700;
+        margin-bottom: 10px;
+        text-transform: uppercase; } } }
