--- a/src/client/components/Player/Player.scss
+++ b/src/client/components/Player/Player.scss
@@ -1,18 +1,35 @@
 @import "../../globals/index.scss";
 
 .Player {
-  z-index: 4;
+  z-index: 4; 
   width: 100%;
   height: $PLAYER_HEIGHT;
   box-shadow: 0 1px 4px 0 rgba(51, 51, 51, 0.3);
   &__timeline {
     width: 100%;
     height: 5px;
-    background-color: #e0e0e0;
     &-progress {
-      width: 30%;
+      width: 100%;
       height: 100%;
-      background-color: #BDBDBD; } }
+      outline: none;
+      display: block;
+      cursor: pointer;
+      overflow: hidden;
+      -webkit-appearance: none;
+      background-color: #E0E0E0;
+      &::-webkit-slider-runnable-track {
+        width: 300px;
+        height: 5px;
+        border: none;
+        transition: .2s all; }
+      &::-webkit-slider-thumb {
+        width: 5px;
+        height: 5px;
+        border: none;
+        -webkit-appearance: none;
+        box-shadow: -100vw 0 0 100vw #BDBDBD; }
+      &:focus {
+        outline: none; } } }
   &__link {
     text-decoration: none;
     &:hover {
@@ -20,17 +37,58 @@
   &__main {
     display: flex;
     align-items: center; }
-    &__left,
-    &__right {
+    &__info,
+    &__controls {
       height: 100%; }
-    &__left {
+    &__controls {
       display: flex;
       padding: 15px 18px;
       border-right: 1px solid #e0e0e0; }
-    &__right {
+    &__info {
       width: 100%;
       display: flex;
-      padding: 15px 18px; }
+      padding: 15px 18px;
+      align-items: center;
+      justify-content: space-between; 
+      &-right {
+        display: flex;
+        align-items: center;
+        &-max,
+        &-volume,
+        &-duration {
+          margin-right: 10px; }
+        &-duration {
+          font-size: 15rem; }
+        &-volume {
+          display: flex;
+          align-items: center;
+          &-text {
+            margin-right: 10px;
+            font-size: 15rem; }
+          &-input {
+            width: 100%;
+            height: 100%;
+            outline: none;
+            display: block;
+            cursor: pointer;
+            overflow: hidden;
+            border-radius: 15px;
+            -webkit-appearance: none;
+            background-color: #E0E0E0;
+            &::-webkit-slider-runnable-track {
+              height: 15px;
+              border: none;
+              transition: .2s all; }
+            &::-webkit-slider-thumb {
+              width: 15px;
+              height: 15px;
+              border: none;
+              border-radius: 100%;
+              background: #333333;
+              -webkit-appearance: none;
+              box-shadow: -100vw 0 0 100vw #BDBDBD; }
+            &:focus {
+              outline: none; } } } } }
       &__icon {
         outline: none;
         font-size: 40rem;
