--- a/src/client/components/Form/FormInput/FormInput.scss
+++ b/src/client/components/Form/FormInput/FormInput.scss
@@ -1,3 +1,5 @@
+@import "../../../globals/index.scss";
+
 .FormInput {
   width: 100%;
   border: none;
@@ -5,4 +7,6 @@
   font-size: 18px;
   line-height: 18px;
   padding: 15px 0 12px 0;
-  background-color: transparent; }
+  background-color: transparent;
+  &::-webkit-file-upload-button {
+    display: none; } }
