--- a/src/client/components/Player/Player.scss
+++ b/src/client/components/Player/Player.scss
@@ -60,35 +60,9 @@
         &-duration {
           font-size: 15rem; }
         &-volume {
-          display: flex;
-          align-items: center;
-          &-text {
-            margin-right: 10px;
-            font-size: 15rem; }
-          &-input {
-            width: 100%;
-            height: 100%;
-            outline: none;
-            display: block;
-            cursor: pointer;
-            overflow: hidden;
-            border-radius: 15px;
-            -webkit-appearance: none;
-            background-color: #E0E0E0;
-            &::-webkit-slider-runnable-track {
-              height: 15px;
-              border: none;
-              transition: .2s all; }
-            &::-webkit-slider-thumb {
-              width: 15px;
-              height: 15px;
-              border: none;
-              border-radius: 100%;
-              background: #333333;
-              -webkit-appearance: none;
-              box-shadow: -100vw 0 0 100vw #BDBDBD; }
-            &:focus {
-              outline: none; } } } } }
+          width: 200px;
+          margin: 0 10px;
+          position: relative; } } }
       &__icon {
         outline: none;
         font-size: 40rem;
