--- a/src/client/components/Queue/Queue.scss
+++ b/src/client/components/Queue/Queue.scss
@@ -9,9 +9,9 @@
     border-radius: $BORDER_RADIUS;
     box-shadow: 0 2px 4px rgba(0,0,0, 0.1);
     &-text {
+      color: #757575;
       font-size: 18rem;
-      font-weight: 600;
-      margin-bottom: 10px; } }
+      margin-bottom: 15px; } }
   &__song {
     margin-bottom: 12px;
     &:last-child {
