--- a/src/client/components/PlayerBar/PlayerBar.scss
+++ b/src/client/components/PlayerBar/PlayerBar.scss
@@ -18,39 +18,28 @@
     &:hover {
       background-color: #e0e0e0; } }
   &__main,
-  &__queue,
-  &__controls,
-  &__fullscreen {
-    height: 100%;
-    display: block;
-    border-right: 1px solid #e0e0e0;
-    &:last-child {
-      border: none; } }
-  &__queue,
-  &__controls,
-  &__fullscreen {
-    display: flex;
-    align-items: center; }
   &__controls {
-    padding: 15px; }
+    height: 100%; }
+  &__controls {
+    padding: 15px;
+    display: flex;
+    border-right: 1px solid #e0e0e0;
+    align-items: center; }
   &__main {
     width: 100%;
-    padding: 15px 15px 13px 19px;
+    padding: 15px 19px 13px 19px;
     &-info {
       display: flex;
       padding-bottom: 13px;
       justify-content: space-between;
       &-right {
         display: flex;
-        align-items: center; } } }
-  &__queue,
-  &__fullscreen {
-    padding: 0 5px;
-    cursor: pointer;
-    transition: .2s all;
-    &:hover {
-      background-color: #e0e0e0; }
-    &-icon {
-      border-radius: 0;
-      &:hover {
-        background-color: transparent; } } } }
+        margin-top: 2px;
+        align-items: center;
+        &-queue,
+        &-volume {
+          margin-right: 10px; }
+        &-volume {
+          font-size: 35rem; }
+        &-fullscreen {
+          margin-right: -8px; } } } } }
