--- a/src/client/components/Progress/Progress.scss
+++ b/src/client/components/Progress/Progress.scss
@@ -6,42 +6,7 @@
   &__end,
   &__start {
     font-size: 14px; }
-  &__bar {
+  &__slider {
     width: 100%;
     height: 100%;
-    margin: 0 10px;
-    cursor: pointer;
-    position: relative;
-    &-track {
-      left: 0;
-      right: 0;
-      top: 3px;
-      bottom: 3px;
-      height: 6px;
-      position: absolute;
-      border-radius: 6px;
-      background-color: #BDBDBD; }
-    &-progress {
-      left: 0;
-      top: 3px;
-      width: 50%;
-      bottom: 3px;
-      position: absolute;
-      border-radius: 6px;
-      background-color: #616161; }
-    &-thumb {
-      top: 0;
-      bottom: 0;
-      width: 12px;
-      height: 12px;
-      margin-left: -6px;
-      position: absolute;
-      transition: .1s all;
-      border-radius: 100%;
-      background-color: #212121;
-      box-shadow: 0 1px 4px 0 rgba(51, 51, 51, 0.3);
-      &:hover {
-        top: -4px;
-        width: 20px;
-        height: 20px;
-        margin-left: -10px; } } } }
+    margin: 0 15px 17px 15px; } }
